force-app/main/default/objects/Punch_In_Out__c/Punch_In_Out__c.object-meta.xml
<CustomObject>
    <label>Punch In/Out</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Punch In/Out ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Punch In/Out</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>