force-app/main/default/objects/Punch_In_Out__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance</label>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipLabel>Punch In/Out</relationshipLabel>
    <relationshipName>Punch_In_Out</relationshipName>
    <type>Lookup</type>
</CustomField>