force-app/main/default/objects/Punch_In_Out__c/fields/Employee_Information__c.field-meta.xml
<CustomField>
    <fullName>Employee_Information__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Information</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Punch In/Out</relationshipLabel>
    <relationshipName>Punch_In_Out</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>