force-app/main/default/objects/Punch_In_Out__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <formula>Employee_Information__r.Name</formula>
    <label>Employee Name (Flow)</label>
    <type>Text</type>
</CustomField>