force-app/main/default/objects/Punch_In_Out__c/fields/Source_type__c.field-meta.xml
<CustomField>
    <fullName>Source_type__c</fullName>
    <label>Source type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>