force-app/main/default/objects/Punch_In_Out__c/fields/Timestamp_DateOnly__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_DateOnly__c</fullName>
    <description>Use in Flow only</description>
    <formula>DATEVALUE( Timestamp__c )</formula>
    <label>Timestamp</label>
    <type>Date</type>
</CustomField>