force-app/main/default/objects/Punch_In_Out__c/validationRules/Employee_info_match_with_attendance.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_info_match_with_attendance</fullName>
    <active>true</active>
    <errorConditionFormula>If(
isblank( Attendance__c),false, 
Employee_Information__r.Id &lt;&gt; Attendance__r.Employee__r.Id)</errorConditionFormula>
    <errorDisplayField>Attendance__c</errorDisplayField>
    <errorMessage>Employee info in this record need to match with employee info in attendance</errorMessage>
</ValidationRule>