force-app/main/default/objects/Punch_In_Out__c/validationRules/Timestamp_date_match_with_attendance.validationRule-meta.xml
<ValidationRule>
    <fullName>Timestamp_date_match_with_attendance</fullName>
    <active>true</active>
    <errorConditionFormula>If(
isblank( Attendance__c),false, 
 datevalue(Timestamp__c)  &lt;&gt;  Attendance__r.Attendance_date__c )</errorConditionFormula>
    <errorDisplayField>Attendance__c</errorDisplayField>
    <errorMessage>Attendance date need to match with timestamp</errorMessage>
</ValidationRule>